--- a/backend-system/.env
+++ b/backend-system/.env
@@ -2,3 +2,7 @@ JWT_SECRET=nguyentientrung
 JWT_EXPIRES_ACCESS = 1h
 REACT_URL = http://localhost:5173
 FRONT_END_URL = http://localhost:5173
+TOKEN_BOT_TELEGRAM = 7908809391:AAH6Ii0LykXVwrW7Cs90vjtmyJnZnLOvt3Y
+CHAT_ID_TELE = -4667328395
+EMAIL_APP_NAME = truongsonpt.80@gmail.com
+EMAIL_APP_PASSWORD = gkco mfgw bypq dxbc
