--- a/backend-system/package.json
+++ b/backend-system/package.json
@@ -41,6 +41,7 @@
         "typescript": "^5.4.5"
     },
     "dependencies": {
+        "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "class-transformer": "^0.1.0-beta.10",
@@ -54,6 +55,7 @@
         "jsonwebtoken": "^9.0.2",
         "mssql": "^10.0.2",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.10.0",
         "sequelize": "^6.37.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
