--- a/front_end_toyota/package.json
+++ b/front_end_toyota/package.json
@@ -1,45 +1,49 @@
 {
-  "name": "front_end_toyota",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^5.6.1",
-    "@reduxjs/toolkit": "^2.5.1",
-    "@tailwindcss/vite": "^4.0.6",
-    "antd": "^5.24.0",
-    "axios": "^1.7.9",
-    "install": "^0.13.0",
-    "npm": "^11.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
-    "redux-persist": "^6.0.0",
-    "slug": "^10.0.0",
-    "sweetalert2": "^11.16.0",
-    "tailwindcss": "^4.0.6",
-    "uuid": "^11.0.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@types/slug": "^5.0.9",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
-  }
+    "name": "front_end_toyota",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^5.6.1",
+        "@reduxjs/toolkit": "^2.5.1",
+        "@tailwindcss/vite": "^4.0.6",
+        "antd": "^5.24.0",
+        "axios": "^1.7.9",
+        "install": "^0.13.0",
+        "npm": "^11.1.0",
+        "react": "^19.0.0",
+        "react-countup": "^6.5.3",
+        "react-dom": "^19.0.0",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^7.1.5",
+        "react-slick": "^0.30.3",
+        "redux-persist": "^6.0.0",
+        "slick-carousel": "^1.8.1",
+        "slug": "^10.0.0",
+        "sweetalert2": "^11.16.0",
+        "tailwindcss": "^4.0.6",
+        "uuid": "^11.0.5"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.19.0",
+        "@types/node": "^22.13.1",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@types/react-slick": "^0.23.13",
+        "@types/slug": "^5.0.9",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "eslint": "^9.19.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.18",
+        "globals": "^15.14.0",
+        "typescript": "~5.7.2",
+        "typescript-eslint": "^8.22.0",
+        "vite": "^6.1.0"
+    }
 }
