--- a/front_end_toyota/package.json
+++ b/front_end_toyota/package.json
@@ -15,6 +15,7 @@
         "@tailwindcss/vite": "^4.0.6",
         "antd": "^5.24.0",
         "axios": "^1.7.9",
+        "dayjs": "^1.11.13",
         "install": "^0.13.0",
         "npm": "^11.1.0",
         "react": "^19.0.0",
