--- a/front_end_toyota/.hintrc
+++ b/front_end_toyota/.hintrc
@@ -10,6 +10,13 @@
           "iframe[loading]"
         ]
       }
+    ],
+    "axe/forms": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
     ]
   }
 }
