--- a/front_end_toyota/package.json
+++ b/front_end_toyota/package.json
@@ -11,16 +11,21 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.6.1",
+        "@ckeditor/ckeditor5-build-classic": "^44.2.0",
+        "@ckeditor/ckeditor5-react": "^9.5.0",
         "@reduxjs/toolkit": "^2.5.1",
         "@tailwindcss/vite": "^4.0.6",
         "antd": "^5.24.0",
         "axios": "^1.7.9",
         "dayjs": "^1.11.13",
         "install": "^0.13.0",
+        "markdown-it": "^14.1.0",
         "npm": "^11.1.0",
         "react": "^19.0.0",
         "react-countup": "^6.5.3",
         "react-dom": "^19.0.0",
+        "react-markdown": "^9.0.3",
+        "react-markdown-editor-lite": "^1.3.4",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.1.5",
         "react-slick": "^0.30.3",
@@ -33,6 +38,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/markdown-it": "^14.1.2",
         "@types/node": "^22.13.1",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
